// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarStack should render correctly 1`] = `
<DocumentFragment>
  .cache-1ifqdli-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D9DADD66;
  overflow: hidden;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #521094 25%, #521094 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #521094
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #521094;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+2) {
  background-color: #521094D9;
  background-image: linear-gradient(
          135deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #d9dadd33 25%,
          #52109412 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #5210944D 25%, #5210944D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #5210944D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.cache-hd3lu9-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.cache-w3peko-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    class="cache-1ifqdli-StyledContainer ezikjce0"
  >
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 10.638297872340425%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      />
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with event handlers 1`] = `
<DocumentFragment>
  .cache-1ifqdli-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D9DADD66;
  overflow: hidden;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #521094 25%, #521094 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #521094
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #521094;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+2) {
  background-color: #521094D9;
  background-image: linear-gradient(
          135deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #d9dadd33 25%,
          #52109412 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #5210944D 25%, #5210944D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #5210944D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.cache-hd3lu9-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.cache-w3peko-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    class="cache-1ifqdli-StyledContainer ezikjce0"
  >
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 100%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Hello
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with total 1`] = `
<DocumentFragment>
  .cache-1ifqdli-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D9DADD66;
  overflow: hidden;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #521094 25%, #521094 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #521094
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #521094;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+2) {
  background-color: #521094D9;
  background-image: linear-gradient(
          135deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #d9dadd33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #d9dadd33 25%,
          #52109412 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #5210944D 25%, #5210944D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #5210944D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-1ifqdli-StyledContainer .ezikjce2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.cache-hd3lu9-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.cache-w3peko-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    class="cache-1ifqdli-StyledContainer ezikjce0"
  >
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 2%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 4.2%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      />
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 4.2%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 4.2%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-hd3lu9-StyledBarWrapper ezikjce2"
      style="width: 4.2%;"
    >
      <div
        class="cache-w3peko-StyledBar ezikjce1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;
